Slight date adjustment

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1> Serenidad </h1>
 <p> Serenidad is an online cafe ordering platform. We’re looking for designers, researchers, animators, illustrators, developers, and anyone with a passion for cafes,
     technologies, and community building.</p>
-<p> Site & App launching in September</p>
+<p> Site & App launching this September</p>
