--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <h1> Serenidad </h1>
-<p> Serenidad is an online cafe ordering platform. We’re looking for designers, researchers, animators, illustrators, developers, and anyone with a passion for cafes,
-    technologies, and community building.</p>
+<p> Serenidad is technology company. We seek to improve the cafe ordering experience. We're always looking to expand our team, so feel free to reach out</p>
 <p> Site & App launching this September</p>
