--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<h1> Serenidad </h1>
-<p> Serenidad is technology company. We seek to improve the cafe ordering experience. We're always looking to expand our team, so feel free to reach out</p>
-<p> Site & App launching this September</p>
+<!doctype html>
+<html> 
+    <head>
+        <title>Serenidad</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href=serenidad>
+        <body>
+            <h1> Serenidad </h1>
+            <p> Serenidad is technology company. We seek to improve the cafe ordering experience. We're always looking to expand our team, so feel free to reach out</p>
+            <p> Site & App launching this September</p>
+        </body>
+    </head>
+</html>
