--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href=serenidad.css>
         <body>
             <h1> Serenidad </h1>
-            <p> Serenidad is technology company. We seek to improve the cafe ordering experience. We're always looking to expand our team, so feel free to reach out</p>
+            <p> Serenidad is technology company. We seek to improve the cafe ordering experience. We are always looking to expand our team, so feel free to reach out</p>
             <p> Site & App launching this September</p>
         </body>
     </head>
