--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html> 
     <head>
-        <title>Serenidad</title>
+        <title>Serenidad </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href=serenidad.css>
         <body>
-            <h1> Serenidad </h1>
-            <p> Serenidad is technology company improving the cafe ordering experience. We are always looking to expand our team, so feel free to reach out.</p>
-            <p> The site & app are launching this September</p>
+            <section>
+                <h1> <img src="img//logo.svg" alt="Serenidad"> Serenidad </h1>
+                <p> Serenidad is technology company improving the cafe ordering experience. We are always looking to expand our team, so feel free to reach out.</p>
+                <p> The site & app are launching this September</p>
+            </section>
         </body>
     </head>
 </html>
