added whole recipe gui

--- a/index.html
+++ b/index.html
@@ -4,12 +4,26 @@
         <title>Serenidad </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href=serenidad.css>
+    </head>
+
         <body>
-            <section>
-                <h1> <img src="img//logo.svg" alt="Serenidad"> Serenidad </h1>
-                <p> Serenidad is technology company improving the cafe ordering experience. We are always looking to expand our team, so feel free to reach out.</p>
-                <p> The site & app are launching this September</p>
+            <section class= "content">
+                <section class="recipes">
+                    <h1>Your Recipes</h1>
+                    <div class="list">
+                        <a class="breakfast" href = "breakfast.html"><h3>Breakfast</h3></a>
+                        <a class="lunch"><h3>Lunch</h3></a>
+                        <a class="dinner"><h3>Dinner</h3></a>
+                        <a class="dessert"><h3>Dessert</h3></a>
+                    </div>
+                </section>
+
+                <section class="discovery">
+                    <h1>Discovery</h1>
+                    <div class="gamewidget">
+                        <a><h3>Play food discovery</h3></a>
+                    </div>
+                </section>
             </section>
         </body>
-    </head>
 </html>
