--- a/apple-pie-recipe.html
+++ b/apple-pie-recipe.html
@@ -4,6 +4,7 @@
         <title>Serenidad </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href=serenidad.css>
+        <script src="scroll.js"></script>
     </head>
 
     <body>
